k8 config added